objects/PLNDR__PrecisionLender_Scenario__c.object
<CustomObject>
    <description>PrecisionLender Scenario</description>
    <fields>
        <fullName>PLNDR__Competitor_Name__c</fullName>
        <description>Name of the competitor for competitive scenario</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Name of the competitor for competitive scenario</inlineHelpText>
        <label>Competitor Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PLNDR__FS_Average_Assets__c</fullName>
        <description>PrecisionLender Scenario Financial Statement Average Assets</description>
        <inlineHelpText>PrecisionLender Scenario Financial Statement Average Assets</inlineHelpText>
        <label>Average Assets</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PLNDR__FS_Average_Equity__c</fullName>
        <description>PrecisionLender Scenario Financial Statement Average Equity</description>
        <inlineHelpText>PrecisionLender Scenario Financial Statement Average Equity</inlineHelpText>
        <label>Average Equity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PLNDR__FS_Average_Yield__c</fullName>
        <description>This is the average interest income divided by the average outstanding assets.</description>
        <formula>if( PLNDR__FS_Average_Assets__c &gt; 0, PLNDR__FS_Interest_Income__c / PLNDR__FS_Average_Assets__c , null )</formula>
        <inlineHelpText>This is the average interest income divided by the average outstanding assets.</inlineHelpText>
        <label>Average Yield</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PLNDR__FS_Interest_Expense__c</fullName>
        <description>PrecisionLender Scenario Financial Statement Interest Expense</description>
        <inlineHelpText>PrecisionLender Scenario Financial Statement Interest Expense</inlineHelpText>
        <label>Interest Expense</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PLNDR__FS_Interest_Income__c</fullName>
        <description>PrecisionLender Scenario Financial Statement Interest Income</description>
        <inlineHelpText>PrecisionLender Scenario Financial Statement Interest Income</inlineHelpText>
        <label>Interest Income</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PLNDR__FS_Loan_Average_Balance__c</fullName>
        <description>PrecisionLender Scenario Financial Statement Loan Average Balance</description>
        <inlineHelpText>PrecisionLender Scenario Financial Statement Loan Average Balance</inlineHelpText>
        <label>Loan Average Balance</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PLNDR__FS_Loan_Commitment__c</fullName>
        <description>PrecisionLender Scenario Financial Statement Loan Commitment</description>
        <inlineHelpText>PrecisionLender Scenario Financial Statement Loan Commitment</inlineHelpText>
        <label>Loan Commitment</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PLNDR__FS_Loan_Gross_Funding__c</fullName>
        <description>PrecisionLender Scenario Financial Statement Loan Gross Funding</description>
        <inlineHelpText>PrecisionLender Scenario Financial Statement Loan Gross Funding</inlineHelpText>
        <label>Loan Gross Funding</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PLNDR__FS_Loan_Loss_Reserves__c</fullName>
        <description>PrecisionLender Scenario Financial Statement Loan Loss Reserves</description>
        <inlineHelpText>PrecisionLender Scenario Financial Statement Loan Loss Reserves</inlineHelpText>
        <label>Loan Loss Reserves</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PLNDR__FS_Loan_Net_Commitment__c</fullName>
        <description>PrecisionLender Scenario Loan Net Commitment</description>
        <inlineHelpText>PrecisionLender Scenario Loan Net Commitment</inlineHelpText>
        <label>Loan Net Commitment</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PLNDR__FS_Loan_Net_Funding__c</fullName>
        <description>PrecisionLender Scenario Financial Statement Loan Net Funding</description>
        <inlineHelpText>PrecisionLender Scenario Financial Statement Loan Net Funding</inlineHelpText>
        <label>Loan Net Funding</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PLNDR__FS_Net_Income__c</fullName>
        <description>PrecisionLender Scenario Financial Statement Net Income</description>
        <inlineHelpText>PrecisionLender Scenario Financial Statement Net Income</inlineHelpText>
        <label>Net Income</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PLNDR__FS_Net_Interest_Income__c</fullName>
        <description>PrecisionLender Scenario Financial Statement Net Interest Income</description>
        <inlineHelpText>PrecisionLender Scenario Financial Statement Net Interest Income</inlineHelpText>
        <label>Net Interest Income</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PLNDR__FS_Net_Interest_Margin__c</fullName>
        <description>This is the Net Interest Margin - the Net Interest Income divided by the Average Outstanding Assets.</description>
        <formula>IF( PLNDR__FS_Average_Assets__c &gt; 0, PLNDR__FS_Net_Interest_Income__c / PLNDR__FS_Average_Assets__c, null )</formula>
        <inlineHelpText>This is the Net Interest Margin - the Net Interest Income divided by the Average Outstanding Assets.</inlineHelpText>
        <label>Net Interest Margin</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PLNDR__FS_Non_Interest_Expense__c</fullName>
        <description>PrecisionLender Scenario Financial Statement Non Interest Expense</description>
        <inlineHelpText>PrecisionLender Scenario Financial Statement Non Interest Expense</inlineHelpText>
        <label>Non Interest Expense</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PLNDR__FS_Other_Income__c</fullName>
        <description>PrecisionLender Scenario Financial Statement Other Income</description>
        <inlineHelpText>PrecisionLender Scenario Financial Statement Other Income</inlineHelpText>
        <label>Other Income</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PLNDR__FS_Pre_Tax_Income__c</fullName>
        <description>PrecisionLender Scenario Financial Statement Pre-Tax Income</description>
        <inlineHelpText>PrecisionLender Scenario Financial Statement Pre-Tax Income</inlineHelpText>
        <label>Pre-Tax Income</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PLNDR__FS_ROA__c</fullName>
        <description>PrecisionLender Scenario Financial Statement ROA</description>
        <inlineHelpText>PrecisionLender Scenario Financial Statement ROA</inlineHelpText>
        <label>ROA</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PLNDR__FS_ROE__c</fullName>
        <description>PrecisionLender Scenario Financial Statement ROE</description>
        <inlineHelpText>PrecisionLender Scenario Financial Statement ROE</inlineHelpText>
        <label>ROE</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PLNDR__FS_Target_Net_Income__c</fullName>
        <description>PrecisionLender Scenario Financial Statement Target Net Income</description>
        <inlineHelpText>PrecisionLender Scenario Financial Statement Target Net Income</inlineHelpText>
        <label>Target Net Income</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PLNDR__FS_Target_ROA__c</fullName>
        <description>PrecisionLender Scenario Financial Statement Target ROA</description>
        <inlineHelpText>PrecisionLender Scenario Financial Statement Target ROA</inlineHelpText>
        <label>Target ROA</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PLNDR__FS_Target_ROE__c</fullName>
        <description>PrecisionLender Scenario Financial Statement Target ROE</description>
        <inlineHelpText>PrecisionLender Scenario Financial Statement Target ROE</inlineHelpText>
        <label>Target ROE</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PLNDR__FS_Taxes__c</fullName>
        <description>PrecisionLender Scenario Financial Statement Taxes</description>
        <inlineHelpText>PrecisionLender Scenario Financial Statement Taxes</inlineHelpText>
        <label>Taxes</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PLNDR__Is_Pipeline__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Should this scenario be the one to represent the Opportunity in Pipeline calculations?</description>
        <inlineHelpText>Should this scenario be the one to represent the Opportunity in Pipeline calculations?</inlineHelpText>
        <label>Is Pipeline Scenario</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PLNDR__Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Related Opportunity</description>
        <inlineHelpText>Related Opportunity</inlineHelpText>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>PrecisionLender Scenarios</relationshipLabel>
        <relationshipName>PrecisionLender_Scenarios</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PLNDR__PrecisionLender_Last_Updated__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>PrecisionLender Last Updated</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>PLNDR__Scenario_Description__c</fullName>
        <description>PrecisionLender Scenario Description</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>PrecisionLender Scenario Description</inlineHelpText>
        <label>Scenario Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PLNDR__Scenario_Name__c</fullName>
        <description>name of Scenario</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>name of Scenario</inlineHelpText>
        <label>Scenario Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PLNDR__Scenario_Type__c</fullName>
        <description>Type should be either alternative or competitive</description>
        <inlineHelpText>Type should be either alternative or competitive</inlineHelpText>
        <label>Scenario Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>alternative</fullName>
                    <default>true</default>
                    <label>alternative</label>
                </value>
                <value>
                    <fullName>competitive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PLNDR__lookupKey__c</fullName>
        <description>PrecisionLender record lookup key</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <inlineHelpText>PrecisionLender record lookup key</inlineHelpText>
        <label>lookupKey</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>PrecisionLender Scenario</label>
    <listViews>
        <fullName>PLNDR__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>PL-S-{00000000}</displayFormat>
        <label>Scenario</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PrecisionLender Scenarios</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>